--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.0"
   },
