--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^5.4.0",
     "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.2.0"
+    "swiper": "^11.2.0",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
